# attack-trace-analyzer

./: .gitignore  .gitmodules  BUGFIX_event.id_missing.md  README.md  attack.sh  close.sh  deploy-new-backend.sh  start.sh  常用命令.md
backend/: .coveragerc  .env.example  CORRELATION_HTTP_LINE_FIX.md  FINDINGS_HTTP_LINE_FIX.md  OPENSEARCH_OOM_FIX.md  OPENSEARCH_VERSION_INFO.md  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  test_direct.py  verify_opensearch_config.ps1
backend/app/: main.py
backend/app/api/: router.py  utils.py
backend/app/core/: config.py  logging.py  time.py
backend/app/dto/: __init__.py  targets.py
backend/app/schemas/: common.py
backend/app/services/: client_poller.py  ttp_similarity.py
backend/data/: attack_fsa.py
backend/docs/: DEEPSEEK_SETUP.md
backend/graph/: api.py  callchain.py  ecs_ingest.py  load.py  load_sample.py  models.py  readme.md  test.py  utils.py
backend/opensearch/: API_REFERENCE.md  README.md  __init__.py  analysis.py  client.py  index.py  mappings.py  storage.py  trigger_lock.py
backend/opensearch/docs/: API_REFERENCE.md  DEPLOYMENT.md  SIGMA_RULES_SETUP.md  TEST_SECURITY_ANALYTICS.md  进度总结.md
backend/opensearch/scripts/: import_sigma_rules.py  setup_security_analytics.py  test_import_rules.py
backend/opensearch/test/: README.md  (+8 more)
backend/scripts/: README.md  fetch_mitre_attack_cti.sh  import_test_data.py  run_test.bat  run_test.sh  test_analyze.py  test_fsa.py  test_killchain.py  test_llm_connection.py  triage_remote_state.sh
backend/tests/: README.md  __init__.py  conftest.py
(+998 files in other folders)
