[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "neo4j>=5.0.0",
    "opensearch-py>=2.0.0",
    "pyyaml>=6.0.0",
    "uvicorn>=0.40.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
